Transfer list reponse extended with page information, create/update time in UserEntity